[package]
name = "print_text_slow"
version = "0.1.0"
authors = ["BlauskaerM <blauskaerm@protonmail.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "print_test_slow_server"
path = "src/server/main.rs"

[[bin]]
name = "print_test_slow"
path = "src/client/main.rs"

[dependencies]
rand = "0.8.0"
ansi_term = "0.12"
clap = "2.33.3"
